force-app/main/default/objects/G2Crowd__G2_Favorite__c/G2Crowd__G2_Favorite__c.object-meta.xml
<CustomObject>
    <label>G2 Favorite</label>
    <nameField>
        <label>G2 Favorite Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>G2 Favorites</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>