force-app/main/default/objects/G2Crowd__G2_Favorite__c/fields/G2Crowd__G2_Asset__c.field-meta.xml
<CustomField>
    <fullName>G2Crowd__G2_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>G2 Asset</label>
    <referenceTo>G2Crowd__G2_Asset__c</referenceTo>
    <relationshipLabel>G2 Favorites</relationshipLabel>
    <relationshipName>G2_Favorites</relationshipName>
    <type>Lookup</type>
</CustomField>