force-app/main/default/objects/G2Crowd__G2_Favorite__c/fields/G2Crowd__G2_Asset_Folder__c.field-meta.xml
<CustomField>
    <fullName>G2Crowd__G2_Asset_Folder__c</fullName>
    <label>G2 Asset Folder</label>
    <referenceTo>G2Crowd__G2_Asset_Folder__c</referenceTo>
    <relationshipLabel>G2 Favorites</relationshipLabel>
    <relationshipName>G2_Favorites</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>