force-app/main/default/objects/G2Crowd__G2_Favorite__c/fields/G2Crowd__Unique_Identifier__c.field-meta.xml
<CustomField>
    <fullName>G2Crowd__Unique_Identifier__c</fullName>
    <label>Unique Identifier</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>