force-app/main/default/objects/G2Crowd__G2_Favorite__c/fields/G2Crowd__User__c.field-meta.xml
<CustomField>
    <fullName>G2Crowd__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>G2_Links</relationshipName>
    <type>Lookup</type>
</CustomField>